--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+  # Logs
 logs
 *.log
 npm-debug.log*
@@ -34,7 +34,7 @@ build/Release
 
 # Dependency directories
 #node_modules folder should normally be ignored, but I'm including it for students who forget to run npm install
-# node_modules/
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
